fixed auto zoom issue on mobile safari; improved error handling

--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -7,6 +7,10 @@ body {
     background-color: #fffbeb;
 }
 
+input {
+    font-size: 16px !important;
+}
+
 app-root {
     width: 50%;
     height: 100%;    
